--- a/data-management/package.json
+++ b/data-management/package.json
@@ -4,7 +4,7 @@
   "description": "Webpage to find the smartphone of your dreams",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "cached-request": "^2.0.1",
     "node-html-parser": "^1.2.20",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0"
   }
 }
