--- a/data-management/package.json
+++ b/data-management/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "async-mutex": "^0.2.4",
     "filenamify": "^4.1.0",
+    "https-proxy-agent": "^5.0.0",
     "node-fetch": "^2.6.0",
     "node-html-parser": "^1.2.20"
   },
