--- a/data-management/package.json
+++ b/data-management/package.json
@@ -26,9 +26,11 @@
     "https-proxy-agent": "^5.0.0",
     "moment": "^2.27.0",
     "node-fetch": "^2.6.0",
-    "node-html-parser": "^1.2.20"
+    "node-html-parser": "^1.2.20",
+    "await-semaphore": "^0.1.3"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
     "jest": "^26.1.0"
   }
 }
