upgrade all packages to latest versions + migrate data-management to ES6 + minor fixes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\data-management\\index.js",
-            "cwd": "${workspaceFolder}\\data-management"
+            "program": "${workspaceFolder}/data-management/index.js",
+            "cwd": "${workspaceFolder}/data-management"
         }
     ]
 }
